--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,11 @@ footer p{
 #userName{
     color: white;
 }
+#btn
+{
+    cursor: pointer;
+    background-color: brown;
+    color: white;
+    width: 70px;
+    height: 50px;
+}
