--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,37 @@ footer p{
 #userName{
     color: white;
 }
-#btn
+.btn_js
 {
     cursor: pointer;
     background-color: brown;
     color: white;
     width: 70px;
-    height: 50px;
+    height: 60px;
+}
+img
+{
+    width: 300px;
+    height: 250px;
+}
+.imgs_group
+{
+   display: grid;
+   grid-template-columns: auto auto auto;
+   text-align: center;
+   margin-bottom: 30px;
+}
+.p_topten
+{
+    font-size: 40px;
+    font-weight: bold;
+    border: dotted ;
+    color: white;
+    margin-bottom: 25px;
+}
+.imgs_group h3
+{
+    font-size: 18px;
+    color:darkgoldenrod;
+    margin: 10px 0;
 }
